--- a/sg_ad.ipynb
+++ b/sg_ad.ipynb
@@ -169,8 +169,8 @@
       },
       "outputs": [],
       "source": [
-        "drive_path = '/content/drive/MyDrive/grads'\n",
         "# load all gradients from honest server\n",
+        "drive_path = '/content/drive/MyDrive/grads'\n",
         "honest_grads_original =  load_gradients(drive_path+'/HONEST_cifar10/honest_cifar_grads_', 100)"
       ]
     },
@@ -311,7 +311,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -319,22 +319,7 @@
         "id": "Fpl8vddpwWWE",
         "outputId": "f7f7f317-1cfc-464a-c81e-4143afc994e6"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Initial D.S. of one gradient in an epoch:  <class 'torch.Tensor'>\n",
-            "After conversion, D.S. of one gradient in an epoch:  <class 'numpy.ndarray'>\n",
-            "Gradients brief info: 100 epochs, 782 gradients, single gradient length in size  1728\n",
-            "\n",
-            "Initial D.S. of one gradient in an epoch:  <class 'torch.Tensor'>\n",
-            "After conversion, D.S. of one gradient in an epoch:  <class 'numpy.ndarray'>\n",
-            "Gradients brief info: 100 epochs, 809 gradients, single gradient length in size  1728\n",
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "honest_grads_nparray = grad_tensor_to_numpy_converter(honest_grads_original)\n",
         "fsha_grads_nparray = grad_tensor_to_numpy_converter(fsha_grads_original)"
@@ -391,7 +376,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -399,25 +384,14 @@
         "id": "ubj95802JcGa",
         "outputId": "ce40eb19-35fd-47d5-d1bd-cb29e601fdcc"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Cut gradients at: 782\n",
-            "Number of honest epochs after reduced data rate: 100\n",
-            "First 10 epoch number of gradients and data rates:\n",
-            "(782, 100.0%)  (782, 100.0%)  (782, 100.0%)  (782, 100.0%)  (782, 100.0%)  (782, 100.0%)  (782, 100.0%)  (782, 100.0%)  (782, 100.0%)  (782, 100.0%)  "
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "fsha_grads_nparray_REDUCED = grads_list_epoch_reducer(fsha_grads_nparray, TOTAL_BATCHES)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -425,20 +399,9 @@
         "id": "mvPN11bBDjJt",
         "outputId": "a04399fc-6a7d-4b00-9821-e870049f2406"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Cut gradients at: 782\n",
-            "Number of honest epochs after reduced data rate: 100\n",
-            "First 10 epoch number of gradients and data rates:\n",
-            "(782, 100.0%)  (782, 100.0%)  (782, 100.0%)  (782, 100.0%)  (782, 100.0%)  (782, 100.0%)  (782, 100.0%)  (782, 100.0%)  (782, 100.0%)  (782, 100.0%)  "
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "honest_grads_nparray_REDUCED = grads_list_epoch_reducer(honest_grads_nparray, TOTAL_BATCHES)\n"
+        "honest_grads_nparray_REDUCED = grads_list_epoch_reducer(honest_grads_nparray, TOTAL_BATCHES)"
       ]
     },
     {
@@ -452,7 +415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -460,18 +423,7 @@
         "id": "LlDJSM03Jp1p",
         "outputId": "a0547b7a-099b-4d57-97e9-d7a014b4cd65"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Cut gradients at: 7\n",
-            "Number of honest epochs after reduced data rate: 100\n",
-            "First 10 epoch number of gradients and data rates:\n",
-            "(7, 1.0%)  (7, 1.0%)  (7, 1.0%)  (7, 1.0%)  (7, 1.0%)  (7, 1.0%)  (7, 1.0%)  (7, 1.0%)  (7, 1.0%)  (7, 1.0%)  "
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "honest_grads_reduced_data_rate = []\n",
         "\n",
@@ -521,37 +473,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 57,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "wRgSyVOkLOhW",
-        "outputId": "e3315816-b040-4fe4-b2f4-2bc371a7553f"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "7\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Validation for number of gradients (not mandatory)\n",
-        "count_check = 0\n",
-        "for i in range(len(honest_grads_reduced_data_rate[0])):\n",
-        "    # print(honest_grads_reduced_data_rate[0][0][i], \" -- \", honest_grads_nparray[0][0][i])\n",
-        "    if honest_grads_reduced_data_rate[0][i][0] == honest_grads_nparray_REDUCED[0][i][0]:\n",
-        "        count_check +=1\n",
-        "    if honest_grads_reduced_data_rate[0][i][0] != honest_grads_nparray_REDUCED[0][i][0]:\n",
-        "        print(\"Error!\")\n",
-        "print(count_check)"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "4iQr0GxzEV-w"
@@ -562,7 +483,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -570,21 +491,7 @@
         "id": "yjZGBhm_5gfP",
         "outputId": "34938494-6456-4e0e-f787-f90b3f1112a1"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Number of FSHA Epochs:  100\n",
-            "Length of one FSHA Epoch:  782\n",
-            "Length of one FSHA Grad:  1728\n",
-            "\n",
-            "Number of Honest Epochs:  100\n",
-            "Length of one Honest Epoch:  7\n",
-            "Length of one Honest Grad:  1728\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "print(\"Number of FSHA Epochs: \",len(fsha_grads_nparray_REDUCED))\n",
         "print(\"Length of one FSHA Epoch: \",len(fsha_grads_nparray_REDUCED[0]))\n",
@@ -618,7 +525,7 @@
       "source": [
         "from sklearn.neighbors import LocalOutlierFactor\n",
         "\n",
-        "window_size_list = [1, 10, 20]\n",
+        "window_size_list = [1, 10]\n",
         "\n",
         "print(f\"LOF Data Rate: {data_rate_honest_gradients}\")\n",
         "\n",
@@ -633,7 +540,7 @@
         "  t_detection_point = 0\n",
         "  t_detection_list = []\n",
         "\n",
-        "  # get TPR(True Positive Rates) results\n",
+        "  ### get TPR(True Positive Rates) results\n",
         "  # train LOF with (N)th honest epoch and predict (N)th FSHA epoch\n",
         "  for epoch_fsha in range(epoch_num_fsha): # for FSHA EPOCHS\n",
         "\n",
@@ -670,14 +577,11 @@
         "  t_std_dev = np.std(t_detection_list, dtype = np.float32)\n",
         "  t_std_m_err = round(sem(t_detection_list),4)\n",
         "  print(f\"t avr, t SD, t S.ERR: {t_avr}  -  {round(float(t_std_dev),4)}  -  {t_std_m_err}\")\n",
-        "  # print(\"t avr:\", round(np.average(t_detection_list),4))\n",
-        "  # print(\"t std dev:\",round(np.std(t_detection_list, dtype = np.float32),4))\n",
-        "  # print(\"t std err:\",round(sem(t_detection_list),4))\n",
         "  print(\"-\"*35)\n",
         "  \n",
         "\n",
         "\n",
-        "  # # # get FPR(False Positive Rates) results\n",
+        "  ### get FPR(False Positive Rates) results\n",
         "  for epoch_honest in range(epoch_num_honest):\n",
         "\n",
         "    honest_epoch_len = len(honest_grads_reduced_data_rate[epoch_honest])\n",
